# sample-project-genai

./: .gitignore  README.md  app.py  browser_mcp.json  main.py  pyproject.toml
docs/: datastage_overview.txt  finance_notes.txt  python_tips.txt
