[project]
name = "sample-project-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "langchain-community>=0.3.28",
    "langchain-groq>=0.3.7",
    "mcp-use>=1.3.10",
    "sentence-transformers>=5.1.0",
]
